<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@drawable/bg"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:src="@drawable/tega"
        android:gravity="end"
        android:layout_weight="1"

        android:contentDescription="@string/image_logo">

    </ImageView>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/questionare"
        android:textSize="25sp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorPrimary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"


            android:text="Customer :"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Location :"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#1e1d1d" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plant_process"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="1.FLOW DIAGRAM (ENCLOSED):"
                android:textSize="20sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_box"
                android:textSize="20sp"
                android:cursorVisible="true">
                <requestFocus />
            </EditText>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="2.FEED SIZE DISTRIBUTION(INDICATED):"
                android:textSize="20sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_box"
                android:textSize="20sp"
                android:cursorVisible="true">
                <requestFocus />
            </EditText>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="3.EQUIPMENT MAKE WITH MODEL NO."
                android:textSize="20sp" />
             <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_box"
                android:textSize="20sp"
                android:cursorVisible="true">
                <requestFocus/>
        </EditText>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="4.EQUIPMENT MAKE WITH MODEL NO."
                android:textSize="20sp" />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_box"
                android:textSize="20sp"
                android:hint="Enter "
                android:cursorVisible="true">
                <requestFocus/>
        </EditText>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>